--- a/styles/pages/DetailsMobile.module.scss
+++ b/styles/pages/DetailsMobile.module.scss
@@ -56,15 +56,6 @@
 
     .full_gallery_container {
         border-radius: 5px;
-
-        .extra_images_gallery_container {
-            min-width: 110px !important;
-            max-width: 110px !important;
-
-            .selected_gallery_image {
-                border-radius: 5px;
-            }
-        }
     }
 } 
 
@@ -81,6 +72,7 @@
     background-color: $secondary;
 
     .extra_images_gallery_container {
+        width: 115px !important;
         height: 110px;
         display: flex;
         flex-direction: row;
@@ -94,15 +86,15 @@
             overflow: hidden;
             margin-right: 5px;
 
+            .selected_gallery_image {
+                border-radius: 5px;
+            }
+
             .extra_images_gallery_image {
                 width: 100px !important;
                 height: 100px !important;
                 margin: 5px 5px;
             }
-        }
-
-        .selected_gallery_image {
-            border-radius: 5px;
         }
     }
 }
